[tool.poetry]
name = "hyperion-py"
version = "0.7.4"
description = "Hyperion Ambient Lighting Python Package"
authors = ["Dermot Duffy <dermot.duffy@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
keywords = [
    "hyperion",
]
license = "MIT"
repository = "https://github.com/dermotduffy/hyperion-py"
include = ["hyperion/py.typed", "LICENSE"]
readme = "README.md"
packages = [
    { include = "hyperion" },
]

[tool.poetry.dependencies]
python = "^3.8 | ^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11.1"
pytest-aiohttp = "^0.3.0"
codecov = "^2.1.11"
pytest-timeout = "^1.4.2"
coverage = "^5.5"
pytest-asyncio = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "hyperion",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
default_section = "THIRDPARTY"


[tool.pytest.ini_options]
addopts = "-qq --timeout=9 --cov=hyperion"
console_output_style = "count"
testpaths = [
  "tests",
]
markers = [
  "asyncio",
]
[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 95
